samples/_failures_safe/1761484756_65c2ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_081e19a7.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_081e19a7.c:154:9: error: expected declaration or statement at end of input
  154 |         printf("\n");
      |         ^~~~~~
./samples/SAFE/__tmp_081e19a7.c:154:9: error: expected declaration or statement at end of input
